--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Django = "^5.1.1"
 djangorestframework = "^3.15.2"
 Markdown = "^3.7"
 django-filter = "^24.3"
+drf-spectacular = "^0.27.2"
 
 
 [build-system]
